[gd_scene load_steps=8 format=2]

[ext_resource path="res://Title.jpeg" type="Texture" id=1]
[ext_resource path="res://Start Screen.gd" type="Script" id=2]
[ext_resource path="res://intro.ogv" type="VideoStream" id=3]
[ext_resource path="res://TestTheme.tres" type="Theme" id=4]
[ext_resource path="res://VideoPlayer.gd" type="Script" id=5]
[ext_resource path="res://X2Download.app - Old MacDonald (Instrumental) (256 kbps).mp3" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "fadein"

[node name="Start Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="VideoPlayer" type="VideoPlayer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 3 )
volume_db = -80.0
autoplay = true
script = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -80.0
autoplay = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -125.0
margin_right = 107.0
margin_bottom = -19.0
theme = ExtResource( 4 )
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 91.0
margin_bottom = 51.0
focus_neighbour_top = NodePath("../Quit")
text = "START"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 91.0
margin_bottom = 82.0
focus_neighbour_bottom = NodePath("../Start")
theme = ExtResource( 4 )
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer"]
anims/fadein = SubResource( 1 )

[connection signal="finished" from="Panel/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Button2_pressed"]
